--- a/gym_frontend/pubspec.yaml
+++ b/gym_frontend/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   http: ^1.2.0
   file_picker: ^8.1.6
   shared_preferences: ^2.3.3
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
